--- a/index.html
+++ b/index.html
@@ -1,1 +1,88 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calculator</title>
+    <link rel="stylesheet" href="/styles.css">
+</head>
+<body>
+    <div class="container">
+        <div class="cal-head">
+            <h1 class="creator"><a href="https://github.com/chichawon/Calculator" target="_blank">Nero</a></h1>
+            <h1 class="title"><a href="https://github.com/chichawon/Calculator" target="_blank">Calculator</a></h1>
+        </div>
+        <div class="input-box">
+            
+        </div>
+        <div class="rows">
+            <div class="col">
+                <h1>CLR</h1>
+            </div>
+            <div class="col">
+                <h1>DEL</h1>
+            </div>
+            <div class="col">
+                <h1>=/-</h1>
+            </div>
+            <div class="col">
+                <h1>*</h1>
+            </div>
+        </div>
+        <div class="rows">
+            <div class="col">
+                <h1>7</h1>
+            </div>
+            <div class="col">
+                <h1>8</h1>
+            </div>
+            <div class="col">
+                <h1>9</h1>
+            </div>
+            <div class="col">
+                <h1>/</h1>
+            </div>
+        </div>
+        <div class="rows">
+            <div class="col">
+                <h1>4</h1>
+            </div>
+            <div class="col">
+                <h1>5</h1>
+            </div>
+            <div class="col">
+                <h1>6</h1>
+            </div>
+            <div class="col">
+                <h1>+</h1>
+            </div>
+        </div>
+        <div class="rows">
+            <div class="col">
+                <h1>1</h1>
+            </div>
+            <div class="col">
+                <h1>2</h1>
+            </div>
+            <div class="col">
+                <h1>3</h1>
+            </div>
+            <div class="col">
+                <h1>-</h1>
+            </div>
+        </div>
+        <div class="rows">
+            <div class="col">
+                <h1>0</h1>
+            </div>
+            <div class="col">
+                <h1>.</h1>
+            </div>
+            <div class="col-equal">
+                <h1 class="equal">=</h1>
+            </div>
+        </div>
+    </div>
+    <script src="/script.js"></script>
+</body>
+</html>
